tests/samples/negative/types/reference_return_method_alias_local.ax
module reference_return_method_alias_local;

struct Box {
    value: i32;
}

impl Box {
    fn borrow(self: &Box) -> &i32 {
        return &self.value;
    }
}

fn bad() -> &i32 {
    let box: Box = Box { value: 1 };
    let alias: &Box = &box;
    return alias.borrow();
}

fn main() -> i32 {
    return 0;
}
